[package]
name = "examples"
edition = "2021"
publish = false

[dependencies]
bincode = { workspace = true }
transaction-protos = { path = "../transaction_protos" }
solana-entry = { workspace = true }
tokio = { version = "1", features = ["full"] }
tonic = { workspace = true }

[[example]]
name = "deshred"
path = "deshred.rs"